Mobile fixes, workaround for image cropping. Still need to clean up code

--- a/wp-content/themes/supercraycray/css/custom.css
+++ b/wp-content/themes/supercraycray/css/custom.css
@@ -146,17 +146,45 @@ SCC Home Page
 =============================================================
 */
 .home-image-container-small img {
-  min-width: 360px !important;
+  min-width: 360px;
   width: auto;
   height: auto;
   max-height: 190px;
 }
+
+@media (max-width: 600px) {
+  .home-image-container-small img {
+    min-width: 100%;
+    width: auto;
+    height: auto;
+    max-height: 500px;
+  }
+}
+
+@media (min-width:600px) and (max-width: 991px) {
+  .home-image-container-small {
+    position: absolute;
+    left: -40%;
+  }
+}
+
 /* BLOG VERSION 1 */
 #blog-version-1 #main-content .article-large {
   padding: 0 0 0 10px;
   height: 213px;
   margin-bottom: 20px;
 }
+@media (max-width: 600px) {
+  #blog-version-1 #main-content .article-large {
+    height: auto;
+    margin-bottom: -1px;
+  }
+}
+
+.article-large .frame {
+  height:auto;
+}
+
 #blog-version-1 #main-content .article-large .featured-media {
   margin: 15px 0;
 }
@@ -204,6 +232,13 @@ SCC Home Page
     width: 100%;
     height: 100%;
 }
+
+@media (min-width:600px) and (max-width: 991px) {
+  .home-image-container-small {
+    height: 190px;
+  }
+}
+
 .home-image-container-small .home-image-overlay-small {
     position: absolute;
     bottom: 0;
@@ -221,6 +256,25 @@ SCC Home Page
     padding-left: 10px;
 }
 
+@media (max-width: 600px) {
+  .home-image-container-small .home-image-overlay-small {
+    height: 15%;
+    padding-top: 2%;
+    padding-left: 0px;
+    text-align: center;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 991px) {
+  .home-image-container-small .home-image-overlay-small {
+    font-size: 14px;
+    text-align: center;
+    line-height: 20px;
+    padding-left: 0px;
+    left: 40%;
+  }
+}
+
 /* FRAME */
 .frame {
   background-color: white;
@@ -229,7 +283,7 @@ SCC Home Page
 }
 .frame.thick {
   padding: 9px;
-  height: 215px;
+  height: auto;
 }
 .frame > * {
   max-width: 100%;
@@ -286,6 +340,10 @@ SCC Home Page
 #return-to-top:hover i {
     color: #fff;
     top: 5px;
+}
+/* Infinite Scroll Loading Image */
+#infscr-loading img { 
+  text-align: center; 
 }
 
 /*
